src/test/resources/ttml/test-suite/fail/ipd002-fail.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- DUR > IPD at t = 0 due to rendering -->
<!-- This can only be achieved with CJK characters, otherwise NGBS is exceeded before IPD is exceeded -->
<!-- DUR_T(E_n) = 1 + 1.85/15 * 1.85/15 * (41 / 0.6) > 1 -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
  </head>
  <body>
    <div>
      <p begin="0s" end="1s" tts:fontSize="300%">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
    </div>
  </body>
</tt>
